--- a/amp-onesignal-compat/css/amp-style.css
+++ b/amp-onesignal-compat/css/amp-style.css
@@ -19,6 +19,7 @@ amp-web-push-widget button.subscribe {
     bottom: 70px;
     right: 5px;
     opacity: 0.7;
+    z-index: 999;
 }
 
 amp-web-push-widget button.subscribe .subscribe-icon, amp-web-push-widget button.unsubscribe .subscribe-icon {
@@ -53,4 +54,5 @@ amp-web-push-widget button.unsubscribe {
     bottom: 70px;
     right: 5px;
     opacity: 0.7;
+    z-index: 999;
 }
